--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,7 @@
                      
    
 
-                   <li data-index="rs-1" data-slotamount="1"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
+                   <li data-index="rs-1" data-slotamount="1"   data-rotate="0" data-saveperformance="on" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban1.jpg')}}" alt="" data-bgposition="center center" data-kenburns="off"  class="rev-slidebg" data-no-retina>
                        
@@ -31,7 +31,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack01.png')}}" > 
                          
                           </div>
@@ -68,7 +68,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack02.png')}}" > 
                          
                           </div>
@@ -105,7 +105,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-3-layer-3" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack03.png')}}" > 
                          
                           </div>
@@ -141,7 +141,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-3-layer-3" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack04.png')}}" > 
                          
                           </div>
@@ -177,7 +177,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme " id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack05.png')}}" > 
                          
                           </div>
