--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -421,7 +421,7 @@
               revapi4 = tpj("#rev_slider_4_1").show().revolution({
                   sliderType: "standard",
 
-                  sliderLayout: "fullscreen",
+                  sliderLayout: "standard",
                   dottedOverlay: "none",
                   delay: 7000,
                   navigation: {
