--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -23,7 +23,7 @@
 
                    <li data-index="rs-1" data-slotamount="1"   data-rotate="0" data-saveperformance="on" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
-                        <img src="{{asset('ban1.jpg')}}" alt="" data-bgposition="center center" data-kenburns="off"  class="rev-slidebg" data-no-retina>
+               <img src="{{asset('ban1.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
 
 	
