--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -461,7 +461,7 @@
                           hide_onmobile: false,
                           hide_under: 600,
                           style: "metis",
-                          hide_onleave: true,
+                          hide_onleave: false,
                           hide_delay: 200,
                           hide_delay_mobile: 1200,
                           direction: "horizontal",
