--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -425,8 +425,8 @@
                   navigation: {
                       keyboardNavigation: "on",
                       keyboard_direction: "horizontal",
-                      mouseScrollNavigation: "on",
-                      onHoverStop: "off",
+                      mouseScrollNavigation: "off",
+                      onHoverStop: "on",
                       touch: {
                           touchenabled: "on",
                           swipe_threshold: 75,
