--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -423,7 +423,7 @@
                   dottedOverlay: "none",
                   delay: 7000,
                   navigation: {
-                      keyboardNavigation: "on",
+                      keyboardNavigation: "off",
                       keyboard_direction: "horizontal",
                       mouseScrollNavigation: "off",
                       onHoverStop: "on",
@@ -457,7 +457,7 @@
                           }
                       },
                       bullets: {
-                          enable: true,
+                          enable: false,
                           hide_onmobile: false,
                           hide_under: 600,
                           style: "metis",
