--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -474,11 +474,11 @@
                       }
                   },
                   viewPort: {
-                      enable: false,
+                      enable: true,
                       outof: "pause",
-                      visible_area: "80%"
+                      visible_area: "100%"
                   },
-                  responsiveLevels: [1240, 1024, 778, 600],
+              
                   gridwidth: [1240, 1024, 778, 480],
                   gridheight: [600, 600, 500, 600],
                   lazyType: "all",
