--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -478,7 +478,7 @@
                       outof: "pause",
                       visible_area: "100%"
                   },
-              
+                  responsiveLevels: [1240, 1024, 778, 480],
                   gridwidth: [1240, 1024, 778, 480],
                   gridheight: [600, 600, 500, 600],
                   lazyType: "all",
