--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -8,8 +8,13 @@
 {% block body %}
 
 
-  
 <div class="header-overflow" id="header-overflow"></div>
+  <style>
+  .pack{
+    width:500 px !important;
+        height:500 px !important;
+  }
+    </style>
 <main>
 	
 
