--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,8 +11,8 @@
 <div class="header-overflow" id="header-overflow"></div>
   <style>
   .pack{
-    width:500 px !important;
-        height:500 px !important;
+    width:100% !important;
+        height:100% !important;
   }
     </style>
 <main>
