--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
 <div class="header-overflow" id="header-overflow"></div>
   <style>
   .pack{
-    width:100% !important;
+    width:auto !important;
         height:auto !important;
   }
     </style>
