--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
   <style>
   .pack{
     width:auto !important;
-        height:auto !important;
+        height:500px !important;
   }
     </style>
 <main>
