--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -75,31 +75,27 @@
                     <li data-index="rs-2" data-slotamount="7"   data-rotate="0" data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
-                       
-
-	
-                    
+                      
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
-                         <img src="{{asset('pack02.png')}}" class="pack"> 
-                         
-                          </div>
+                     <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                            <img src="{{asset('pack02.png')}}" class="pack"> 
+                       </div>
                       
                 
-
-
                  
                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['-30','-30','-30','-30']" data-y="['0','-50','-50','320']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">LE PACK
                         </div>
+
                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['70','-70','-70','370']" data-voffset="['0','0','0','0']" data-fontsize="['60','60','60','40']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 700;">    SITE VITRINE
                         </div>
+
                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['120','-20','-20','420']" data-voffset="['0','0','0','0']" data-fontsize="['20','20','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;">  pour une vitrine sur le web.
                         </div>
                   
                      
-                            <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['170','-20','-20','480']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="100%" data-height="none" data-whitespace="break-spaces" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200; max-width:600px !important;  min-width:444px !important;width:400px !important;     line-height: 30px;"> ✔ Nom de domaine, hébergement et sauvegarde. 
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['170','-20','-20','480']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="100%" data-height="none" data-whitespace="break-spaces" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200; max-width:600px !important;  min-width:444px !important;width:400px !important;     line-height: 30px;"> ✔ Nom de domaine, hébergement et sauvegarde. 
                         </div>
 
                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['200','-20','-20','530']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;"> ✔  5 pages web.
@@ -113,13 +109,11 @@
                         </div>
                         
                          <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['290','-20','-20','570']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;"> ✔  Version mobile
-                        </div
+                        </div>
 
-                     
-                     <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['320','-20','-20','570']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;"> ✔  Statistiques
-                     </div>
-
-                 
+                
+                        <div class="tp-caption Gym-Display tp-resizeme" id="slide-2-layer-2" data-x="['600','600','600','40']" data-hoffset="['0','0','0','0']" data-y="['290','-20','-20','570']" data-voffset="['0','0','0','0']" data-fontsize="['16','16','20','25']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial;  font-weight: 200;"> ✔  Version mobile
+                        </div>
 
                      
                     </li>
