--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,10 @@
 
 <div class="header-overflow" id="header-overflow"></div>
   <style>
-
+.pack{
+        width: 100% !important;
+    height: auto !important;
+}
     </style>
 <main>
 	
@@ -499,7 +502,7 @@
 
                   sliderLayout: "fullscreen",
                   dottedOverlay: "none",
-                  delay: 7000,
+                  delay: 8000,
                   navigation: {
                       keyboardNavigation: "off",
                       keyboard_direction: "horizontal",
@@ -519,7 +522,7 @@
                           hide_under: 100,
                           hide_onleave: true,
                           hide_delay: 200,
-                          hide_delay_mobile: 1200,
+                          hide_delay_mobile: 8000,
                           tmp: '<div class="tp-title-wrap"> 	<div class="tp-arr-imgholder"></div> </div>',
                           left: {
                               h_align: "left",
