--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,6 +11,7 @@
  .pack{
 
     width:100%;
+
  }
  </style>
 
@@ -533,7 +534,7 @@
                               v_offset: 0
                           },
                           right: {
-                              h_align: "right",
+                              h_align: "center",
                               v_align: "center",
                               h_offset: 30,
                               v_offset: 0
