--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -14,6 +14,15 @@
     height: auto;
 
  }
+ @media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+ .pack{
+
+    width:350px;
+    height: auto;
+
+ }
+}
  </style>
 
 
