--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -7,14 +7,11 @@
     {% endblock %}
 {% block body %}
 
- <style>
-
-
- </style>
-
 
 <div class="header-overflow" id="header-overflow"></div>
+  <style>
 
+    </style>
 <main>
 	
 
@@ -35,8 +32,8 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display tp-resizeme " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['0','-50','-50','0']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"  data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
-                         <img src="{{asset('pack01.png')}}" class="pack"> 
+                         <div class="tp-caption Gym-Display tp-resizeme " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('pack01.png')}}" style="width: 100% !important;" class="pack"> 
                          
                           </div>
                       
@@ -502,7 +499,7 @@
 
                   sliderLayout: "fullscreen",
                   dottedOverlay: "none",
-                  delay: 8000,
+                  delay: 7000,
                   navigation: {
                       keyboardNavigation: "off",
                       keyboard_direction: "horizontal",
@@ -522,7 +519,7 @@
                           hide_under: 100,
                           hide_onleave: true,
                           hide_delay: 200,
-                          hide_delay_mobile: 8000,
+                          hide_delay_mobile: 1200,
                           tmp: '<div class="tp-title-wrap"> 	<div class="tp-arr-imgholder"></div> </div>',
                           left: {
                               h_align: "left",
@@ -531,7 +528,7 @@
                               v_offset: 0
                           },
                           right: {
-                              h_align: "center",
+                              h_align: "right",
                               v_align: "center",
                               h_offset: 30,
                               v_offset: 0
