--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,9 @@
 
 <div class="header-overflow" id="header-overflow"></div>
   <style>
-
+.pack{
+    min-width: 100% !important;
+}
     </style>
 <main>
 	
