--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -565,7 +565,7 @@
                   },
                   responsiveLevels: [1240, 1024, 778, 480],
                   gridwidth: [1240, 1024, 778, 480],
-                  gridheight: [600, 600, 500, 900],
+                  gridheight: [600, 600, 500, 'auto'],
                   lazyType: "all",
                   parallax: {
                       type: "mouse",
