--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -24,7 +24,7 @@
                      
    
 
-                   <li data-index="rs-1" data-slotamount="1"  data-saveperformance="on" data-title="" data-description="">
+                   <li data-index="rs-1" data-slotamount="1"  data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                     <img src="{{asset('ban1.jpg')}}"  alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
@@ -34,8 +34,8 @@
                         <!-- LAYERS -->
 
 
-                         <div class="rs-pxl-6 rs-layer"  id="slide-1-layer-1" data-type="image" data-x="['-50','-50','-50','-50']" data-y="['-80','-80','-80','-80']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="100%" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
-                         <img src="{{asset('pack01.png')}}" style="width: 100% !important; height:auto !important" class="tp-rs-img rs-lazyload"> 
+                         <div class="tp-caption Gym-Display tp-resizeme " id="slide-1-layer-1" data-x="['-50','-50','-50','-50']" data-y="['-80','-80','-80','-80']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="100%" data-height="auto" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <img src="{{asset('pack01.png')}}" style="width: 100% !important; height:auto !important" class="pack"> 
                          
                           </div>
                       
@@ -78,7 +78,7 @@
                     </li>
 
                                     
-                    <li data-index="rs-2" data-slotamount="2"    data-saveperformance="on" data-title="" data-description="">
+                    <li data-index="rs-2" data-slotamount="2"    data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban2.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                       
@@ -133,7 +133,7 @@
                     </li>
 
                                          
-                   <li data-index="rs-3" data-slotamount="3"  data-saveperformance="on" data-title="" data-description="">
+                   <li data-index="rs-3" data-slotamount="3"  data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban03.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
@@ -191,7 +191,7 @@
                      
                     </li>
 
-                                     <li data-index="rs-4" data-slotamount="4"   data-saveperformance="on" data-title="" data-description="">
+                                     <li data-index="rs-4" data-slotamount="4"   data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban04.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
@@ -201,7 +201,7 @@
                         <!-- LAYERS -->
 
 
-                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-3-layer-3"  data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
+                         <div class="tp-caption Gym-Display tp-resizeme" id="slide-3-layer-3" data-x="['-50','-50','-50','-50']" data-hoffset="['-300','-300','-300','-300']" data-y="['-50','-50','-50','-150']" data-voffset="['-200','-200','-200','-200']" data-fontsize="['50','50','50','30']" data-width="none" data-height="none" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="750" data-splitin="none" data-splitout="none" data-responsive_offset="on" style="z-index: 7; white-space: nowrap; font-family: Arial; font-weight: 200;">
                          <img src="{{asset('pack04.png')}}" class="pack" > 
                          
                           </div>
@@ -251,7 +251,7 @@
                      
                     </li>
         
-                                  <li data-index="rs-5" data-slotamount="5" data-saveperformance="on" data-title="" data-description="">
+                                  <li data-index="rs-5" data-slotamount="5" data-saveperformance="off" data-title="" data-description="">
                         <!-- MAIN IMAGE -->
                         <img src="{{asset('ban5.jpg')}}" alt="" data-bgposition="center center"  class="rev-slidebg" data-no-retina>
                        
