--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -18,7 +18,7 @@
 	
 
               <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
-              <div id="rev_slider_4_1" class="rev_slider_1_1_forcefullwidth" style="display:none;" data-version="5.0.7" style="height:900px !important;">
+              <div id="rev_slider_4_1" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.0.7" style="height:900px !important;">
                   <ul>
       
                      
