--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -561,12 +561,38 @@
                           tmp: '<span class="tp-bullet-img-wrap"> <span class="tp-bullet-image"></span></span><span class="tp-bullet-title"></span>'
                       }
                   },
-                 
+                  viewPort: {
+                      enable: true,
+                      outof: "pause",
+                      visible_area: "100%"
+                  },
                   responsiveLevels: [1240, 1024, 778, 480],
                   gridwidth: [1240, 1024, 778, 480],
                   gridheight: [600, 600, 500, 800],
-           
-            
+                  lazyType: "all",
+                  parallax: {
+                      type: "mouse",
+                      origo: "slidercenter",
+                      speed: 2000,
+                      levels: [1, 2, 3, 4, 5],
+                  },
+                  shadow: 0,
+                  spinner: "on",
+                  stopLoop: "on",
+                  stopAfterLoops: -1,
+                  stopAtSlide: -1,
+                  shuffle: "on",
+                  autoHeight: "on",
+                  hideThumbsOnMobile: "on",
+                  hideSliderAtLimit: 0,
+                  hideCaptionAtLimit: 0,
+                  hideAllCaptionAtLilmit: 0,
+                  debugMode: false,
+                  fallbacks: {
+                      simplifyAll: "on",
+                      nextSlideOnWindowFocus: "off",
+                      disableFocusListener: true,
+                  }
               });
           }
       }); /*ready*/
