--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -521,7 +521,13 @@
                       keyboard_direction: "horizontal",
                       mouseScrollNavigation: "off",
                       onHoverStop: "on",
-                    
+                      touch: {
+                          touchenabled: "on",
+                          swipe_threshold: 75,
+                          swipe_min_touches: 1,
+                          swipe_direction: "horizontal",
+                          drag_block_vertical: false
+                      },
                       arrows: {
                           style: "zeus",
                           enable: true,
