--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,10 @@
 <div class="header-overflow" id="header-overflow"></div>
   <style>
 .pack{
-    min-width: 100% !important;
+    min-width:360px !important;
+    max-width:360px !important;
+    width:360px !important;
+    height:360px !important;
 }
     </style>
 <main>
