--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -16,6 +16,14 @@
     width:260px !important;
     height:260px !important;
 }
+@media only screen and (max-width: 1240px) {
+.pack{
+    min-width:400px !important;
+    max-width:400px !important;
+    width:400px !important;
+    height:400px !important;
+}
+}
     </style>
 <main>
 	
