--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,8 @@
 <div class="header-overflow" id="header-overflow"></div>
   <style>
 
-@media only screen and (max-width: 1366px) {
+
+    @media only screen and (min-device-width : 1240px) and (max-device-width : 1366px){
 .pack{
     min-width:260px !important;
     max-width:260px !important;
@@ -19,7 +20,7 @@
     height:260px !important;
 }
 }
-@media only screen and (max-width: 320px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
 .pack{
     min-width:400px !important;
     max-width:400px !important;
