--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -338,6 +338,7 @@
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
+            {{'aboutus'|trans}}
 
             {% endfor %}
 
