--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -342,7 +342,7 @@
           
 
             {% endfor %}
-{% set message = '<h3>about_us</h3>' %}
+{% set message = 'about_us' %}
       {{ message|trans|raw }}
             
         </div>
