--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -335,15 +335,14 @@
 
           
         </div>
+          {{ 'about_us'|trans }}
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
-
-          
+        
 
             {% endfor %}
-{% set message = 'about_us' %}
-      {{ message|trans|raw }}
+
             
         </div>
     </div>
