--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -335,7 +335,7 @@
 
           
         </div>
-          {{ 'about_us'|trans }}
+          {{ 'message'|trans }}
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
