--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -336,6 +336,7 @@
           
         </div>
           {{ 'message'|trans }}
+          aaa
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
