--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -335,12 +335,13 @@
 
           
         </div>
-    
-          aaa
+          {{ 'message'|trans }}
+          
             {% for apropos in apropos %}
 
             {{ apropos.text1|raw }}
         
+
             {% endfor %}
 
             
