--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -335,7 +335,7 @@
 
           
         </div>
-          {{ 'message'|trans }}
+          {{ 'add_adresse'|trans }}
           
             {% for apropos in apropos %}
 
