--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -327,15 +327,15 @@
     <div class="index-1">
         <div class="index-1-content">
             <div class="index-1-btn" id="index-1-btn">
-                <div class="index-1-top-title">Quelques mots à propos de</div>
-                <div class="index-1-middle-title"><span>Notre</span> entreprise</div>
+                <div class="index-1-top-title">{{'Quelques mots à propos de'|trans}}</div>
+                <div class="index-1-middle-title"><span>{{'Notre'|trans}}</span> {{'entreprise'|trans}} </div>
             </div>
    
         
 
           
         </div>
-          {{ 'add_adresse'|trans }}
+       
           
             {% for apropos in apropos %}
 
