--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -415,7 +415,7 @@
         </div>
     </div>
     <div class="galerie galerie-module-exemple">
-<div class="galerie-title galerie-title-module-exemple">Nos de réalisations</div>
+<div class="galerie-title galerie-title-module-exemple">Nos réalisations</div>
 <div class="galerie-content">
     <div class="galerie-content-items" style="height:500px ;"> 
                                     <a href="{{asset('site4.jpg')}}" class="galerie-content-item galerie-content-item-1 image-popup" title="exemple de réalisation pour les site e-commerce">
