--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,14 @@
 <div class="header-overflow" id="header-overflow"></div>
   <style>
 
-
+    @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
+.pack{
+    min-width:400px !important;
+    max-width:400px !important;
+    width:400px !important;
+    height:400px !important;
+}
+}
     @media only screen and (min-device-width : 1240px) and (max-device-width : 1366px){
 .pack{
     min-width:400px !important;
