--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -227,6 +227,7 @@
 			<a href="#" target="_blank">
 				<i class="fab fa-twitter" aria-hidden></i>
 			</a>
+			<a title="English" href="https://www.marcfoujols.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="https://www.marcfoujols.com/wp-content/plugins/qtranslate-x/flags/gb.png" alt="English"></span></a>
 		</div>
 
 		<div class="header-btn-menu" id="header-btn-menu">
