--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -184,6 +184,11 @@
     right: 315px!important;
 
 }
+.header-lang{
+	    position: relative;
+    float: right;
+    margin-top: 40px;
+}
 		</style>
 	</body>
 </html></head><div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v5.0&appId=2426167164288678&autoLogAppEvents=1"></script><body>
@@ -229,6 +234,7 @@
 		</nav>
 
 		<div class="header-socials">
+			Suivez-nous 
 			<a href="https://web.facebook.com/creativ.agence.web" target="_blank">
 				<i class="fab fa-facebook-f" aria-hidden></i>
 			</a>
