--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -234,7 +234,7 @@
 		</nav>
 
 		<div class="header-socials">
-			Suivez-nous 
+			
 			<a href="https://web.facebook.com/creativ.agence.web" target="_blank">
 				<i class="fab fa-facebook-f" aria-hidden></i>
 			</a>
@@ -243,6 +243,7 @@
 			</a>
 		</div>
 		<div class="header-lang">
+		Langue:
 					<a title="English" href="https://www.marcfoujols.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="https://www.marcfoujols.com/wp-content/plugins/qtranslate-x/flags/gb.png" alt="English"></span></a>
 
 		</div>
