--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -244,7 +244,7 @@
 		</div>
 		<div class="header-lang">
 							<a title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('algeria.svg')}}" width="20px" alt="English"></span></a>
-					<a title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="https://www.marcfoujols.com/wp-content/plugins/qtranslate-x/flags/gb.png" alt="English"></span></a>
+					<a title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('france.svg')}}" width="20px" alt="English"></span></a>
 					<a title="English" href="https://sarlcreativ.com/en/" class=""><i class="menu_icon fa blank"></i><span><img src="https://www.marcfoujols.com/wp-content/plugins/qtranslate-x/flags/gb.png" alt="English"></span></a>
 
 		</div>
