--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -179,16 +179,8 @@
 
     right: 366px  !important;
 }
-.header-socials {
 
-    right: 216px!important;
 
-}
-.header-lang{
-	    position: relative;
-    float: right;
-    margin-top: 40px;
-}
 		</style>
 	</body>
 </html></head><div id="fb-root"></div><script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v5.0&appId=2426167164288678&autoLogAppEvents=1"></script><body>
@@ -233,7 +225,7 @@
 			</div>
 		</nav>
 
-		<div class="header-socials">
+		<div class="header-socials" style="right: 318px!important;">
 			
 			<a href="https://web.facebook.com/creativ.agence.web" target="_blank">
 				<i class="fab fa-facebook-f" aria-hidden></i>
@@ -243,7 +235,7 @@
 			</a>
 					
 		</div>
-				<div class="header-socials">
+				<div class="header-socials" style="right: 25px!important;">
 				
 		{% if app.request.locale == 'fr' %}
 							<a style="margin-right: 5px;"title="English" href="https://sarlcreativ.com/fr/" class=""><i class="menu_icon fa blank"></i><span><img src="{{asset('algeria.svg')}}" width="20px" alt="English"></span></a>
