--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,6 +59,10 @@
 		margin-top: -20px;
 		
 }
+.plugin, .plugin button, .plugin input, .plugin label, .plugin select, .plugin td, .plugin textarea {
+    font-size: 14px;
+    color: white;
+}
 		</style>
 	</head>
 	<body>
