--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,8 +60,8 @@
 		
 }
 .plugin, .plugin button, .plugin input, .plugin label, .plugin select, .plugin td, .plugin textarea {
-    font-size: 14px;
-    color: white;
+    font-size: 14px !important;
+    color: white !important;
 }
 		</style>
 	</head>
