--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -422,7 +422,7 @@
 					</div>
 				</div>
 				<div class="menu-item">
-					<div class="menu-item-link">Marketing web</div>
+					<div class="menu-item-link">{{'Marketing web'|trans}}</div>
 					<div class="menu-item-sub menu-item-sub-04">
 						<a href="" class="menu-item-sub-link">{{'E-mailing'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Sponsoring réseaux sociaux'|trans}}</a>
