--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -323,7 +323,7 @@
 					</div>
 					<div class="menu-mobile-sub">
 						<div class="menu-mobile-sub-title">
-							Logiciel en ligne
+							{{'Logiciel'|trans}}
 							<div class="menu-mobile-sub-title-icon">
 								<i class="fas fa-plus"></i>
 							</div>
@@ -395,7 +395,7 @@
 						<a href="" class="menu-item-sub-link">{{'Site vitrine'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Site catalogue'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Site e-commerce'|trans}}</a>
-						<a href="" class="menu-item-sub-link">{{'Référencement SEO'|trans}}</a>
+						<a href="" class="menu-item-sub-link">{{' Référencement SEO'|trans}}</a>
 						<a href="" class="menu-item-sub-link">{{'Hébergement web'|trans}}</a>
 					</div>
 				</div>
