--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -61,6 +61,9 @@
     font-size: 14px !important;
     color: white !important;
 }
+.nav-item:hover .nav-item-menu {
+	margin-top:-30px;
+}
 		</style>
 
 {% if app.request.locale == 'ar' %}
