--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -73,12 +73,12 @@
 		<style>
 
     @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
-	.menu-item-link,.nav-item-link ,.nav-item-menu-item-link{
+	.menu-item-link,.nav-item-link ,.nav-item-menu-item-link,.menu-item-sub-link{
 		font-size: 18px;
 	}
 }
     @media only screen and (min-device-width : 1240px) and (max-device-width : 1366px){
-	.menu-item-link,.nav-item-link,.nav-item-menu-item-link {
+	.menu-item-link,.nav-item-link,.nav-item-menu-item-link,.menu-item-sub-link {
 		font-size: 18px;
 	}
 }
