--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -611,9 +611,9 @@
                       outof: "pause",
                       visible_area: "100%"
                   },
-                  responsiveLevels: [1240, 1024, 778, 480,400],
-                  gridwidth: [1240, 1024, 778, 480,400],
-                  gridheight: [600, 600, 500, 800, 800],
+                  responsiveLevels: [1240, 1024, 778, 480],
+                  gridwidth: [1240, 1024, 778, 400],
+                  gridheight: [600, 600, 500, 800],
                   lazyType: "all",
                   parallax: {
                       type: "mouse",
