--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,10 @@
 
 <div class="header-overflow" id="header-overflow"></div>
   <style>
+.rev_slider {
 
+    height: 800px !important;
+}
     @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
 .pack{
     min-width:400px !important;
