--- a/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
+++ b/src/Cosanit/CosanitBundle/Resources/views/Default/index.html.twig
@@ -10,10 +10,7 @@
 
 <div class="header-overflow" id="header-overflow"></div>
   <style>
-.rev_slider {
 
-    height: 800px !important;
-}
     @media only screen and (min-device-width : 1920px) and (max-device-width : 1920px){
 .pack{
     min-width:400px !important;
@@ -40,13 +37,17 @@
 
 
 }
+.rev_slider {
+  
+    height: 800px !important;
+}
 }
     </style>
 <main>
 	
 
               <!-- START REVOLUTION SLIDER 5.0.7 auto mode -->
-              <div id="rev_slider_4_1" class="rev_slider " style="height:800px !important;" data-version="5.0.7" style="height:900px !important;">
+              <div id="rev_slider_4_1" class="rev_slider "  data-version="5.0.7" >
                   <ul>
       
                      
